k8s/20-backend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: clinique
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - name: http
      port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: clinique
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: europe-west1-docker.pkg.dev/cliniqueproject/repoclinic/clinique-backend:1.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
              name: http
          readinessProbe:
            httpGet:
              path: /clinique/v3/api-docs
              port: 8082
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 12
          livenessProbe:
            httpGet:
              path: /clinique/v3/api-docs
              port: 8082
            initialDelaySeconds: 60
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6
